# Portafolio-IOL

./: .coverage  .dockerignore  .env.example  .flake8  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  Procfile  README.md  app.py  config.json  estructura.txt  generate_key.py  mypy.ini  noxfile.py  performance_metrics_10.csv  performance_metrics_11.csv  performance_metrics_13.csv  performance_metrics_14.csv  performance_metrics_15.csv  performance_metrics_5.csv  performance_metrics_6.csv  performance_metrics_7.csv  performance_metrics_8.csv  performance_metrics_9.csv  performance_metrics_audit.csv  performance_optimization_plan.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  sitecustomize.py
.github/: PULL_REQUEST_TEMPLATE.md
.streamlit/: bootstrap.css  config.toml
api/: __init__.py  __main__.py  main.py
application/: __init__.py  adaptive_predictive_service.py  auth_service.py  backtesting_service.py  benchmark_service.py  login_service.py  portfolio_service.py  portfolio_viewmodel.py  predictive_jobs.py  predictive_service.py  profile_service.py  recommendation_service.py  risk_service.py  ta_service.py
archive/: .gitkeep
banners/: README
bootstrap/: __init__.py  config.py  startup.py
controllers/: __init__.py  __main__.py  auth.py  fx.py  opportunities.py  opportunities_spec.py  portfolio.py  recommendations_controller.py
data/: __init__.py  assets_catalog.json  loaders.py  normalizer.py
docs/: adaptive_learning_overview.md  cache_management.md  dev_guide.md  iol_endpoints_audit.md  maintenance_jobs.md  operations.md  performance_tuning.md  recommendations_roadmap.md  rendering-architecture.md  rendering-sequence.md  security_refresh.md  security_validation.md  startup_optimization_strategy.md  testing.md  troubleshooting.md  valuation_normalization_plan.md
domain/: __init__.py  adaptive_cache_lock.py  models.py
infrastructure/: __init__.py  asset_catalog.py  assets_catalog.json  local_portfolio.py
logs/: .gitkeep
mypy_report/: index.html
perf/: profile_monitoring_iol_raw.html  profile_portfolio_render.html  profile_return_from_monitoring.html
predictive_engine/: __init__.py  base.py  models.py  storage.py  utils.py
scripts/: README.md  __init__.py  check_bond_scale.py  cleanup_imports.py  export_analysis.py  fix_mypy_ignores.py  generate_version.py  quotes_cache_audit.py  start.sh  sync_asset_catalog.py  sync_requirements.py  test_smoke_endpoints.sh  update_dependencies.sh  warmup_bytecode.py
services/: __init__.py  auth.py  auth_client.py  base_adapter.py  cache.py  data_fetch_service.py  diagnostics.py  environment.py  environment_snapshot.py  fmp_client.py  health.py  iol_exchange_rates.py  iol_ratios_service.py  macro_adapter.py  notifications.py  ohlc_adapter.py  performance_metrics.py  performance_store.py  performance_timer.py  portfolio_view.py  preload_state.py  preload_worker.py  profile_service.py  quote_rate_limit.py  snapshot_defer.py  snapshots.py  startup_logger.py  system_diagnostics.py  system_status.py  update_checker.py
shared/: __init__.py  asset_type_aliases.py  cache.py  config.py  errors.py  exceptions.py  export.py  favorite_symbols.py  fragment_state.py  lazy_import.py  log_rotation.py  logging_utils.py  pandas_attrs.py  portfolio_export.py  portfolio_utils.py  qa_profiler.py  redact.py  security_env_validator.py  settings.py  skeletons.py  snapshot.py  telemetry.py  time_provider.py  user_actions.py  utils.py  version.py  visual_cache_prewarm.py
test/: test_app_main.py  test_auth_flow.py  test_config_secret_env.py  test_fundamentals_controller.py  test_fx_provider.py  test_iol_client_additional.py  test_iol_client_exceptions.py  test_iol_fallbacks.py  test_iol_logging.py  test_legacy_client_additional.py  test_logging_configuration.py  test_login_logout_cycle.py  test_login_page_exceptions.py  test_portfolio_calc_rows.py  test_portfolio_service_utils.py  test_refresh_flow.py  test_render_fx_summary_in_header.py  test_sidebar_controls.py  test_theme_rerun.py  test_token_path_sanitization.py
tests/: __init__.py  conftest.py  test_app_dependencies.py  test_cache_ttls.py  (+26 more)
(+549 files in other folders)
