[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portafolio-iol"
version = "0.3.30.7"  # Keep shared.version.DEFAULT_VERSION aligned with this value
dependencies = [
    "streamlit==1.49.1",
    "pandas==2.3.2",
    "numpy==2.3.3",
    "requests==2.31.0",
    "python-dotenv==1.1.1",
    "iolConn==0.4.2",
    "plotly==6.3.0",
    "matplotlib==3.10.6",
    "kaleido==1.1.0",
    "XlsxWriter==3.2.0",
    "tomli==2.0.1",
    "cryptography==41.0.3",
    "yfinance==0.2.65",
    "ta==0.11.0",
]

[tool.pytest.ini_options]
markers = [
    "live_yahoo: Tests that call the live Yahoo Finance API (enable with RUN_LIVE_YF=1)",
    "slow: Performance-sensitive tests that may take several seconds to finish",
]
# Cobertura obligatoria para los paquetes principales del proyecto.
addopts = "--cov=application --cov=controllers --cov=services"
# Legacy suite retained únicamente para auditorías del cliente antiguo.
norecursedirs = [
    "tests/legacy",
]
