[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portafolio-iol"
version = "0.7.1"  # Keep shared.version.DEFAULT_VERSION aligned with this value
readme = "README.md"
dependencies = [
    "streamlit>=1.49.1",
    "streamlit-javascript==0.1.5",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.1",
    "python-multipart>=0.0.6",
    "pandas>=2.3.2",
    "numpy>=2.3.3",
    "requests==2.31.0",
    "python-dotenv==1.1.1",
    "iolConn==0.4.2",
    "plotly==6.3.1",
    "kaleido==0.2.1",
    "streamlit-vega-lite==0.1.0",
    "XlsxWriter==3.2.0",
    "tomli==2.0.1",
    "scipy>=1.16.2",
    "statsmodels==0.14.3",
    "cryptography>=42.0.0",
    "yfinance==0.2.65",
    "ta==0.11.0",
]

[tool.pytest.ini_options]
markers = [
    "live_yahoo: Tests that call the live Yahoo Finance API (enable with RUN_LIVE_YF=1)",
    "slow: Performance-sensitive tests that may take several seconds to finish",
]
# Legacy suite retained únicamente para auditorías del cliente antiguo.
addopts = "-q"
norecursedirs = [
    "tests/legacy",
]

[tool.coverage.run]
branch = true
source = [
    "application",
    "controllers",
    "services",
    "shared",
    "tests",
    "noxfile",
]
omit = [
    "tests/legacy/*",
]

[tool.bandit]
exclude_dirs = ["tests", "docs", "infrastructure"]
targets = ["application", "controllers", "services", "shared", "noxfile.py"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
warn_unused_ignores = true
namespace_packages = true
show_error_codes = true
pretty = true

[tool.setuptools]
packages = [
  "api",
  "application",
  "bootstrap",
  "controllers",
  "domain",
  "infrastructure",
  "predictive_engine",
  "services",
  "shared",
  "ui",
]
include-package-data = true
